Closed Bug 1732570 Opened 4 years ago Closed 4 years ago

SMIME Header sink overrides from OpenPGP code are either incorrect or unused

Categories

(MailNews Core :: Security: OpenPGP, defect)

defect

Tracking

(thunderbird_esr91 wontfix)

RESOLVED FIXED
95 Branch
Tracking Status
thunderbird_esr91 --- wontfix

People

(Reporter: standard8, Assigned: mkmelin)

Details

Attachments

(1 file)

Doing a search for _smimeHeaderSink the only references to it are uses:

https://searchfox.org/comm-central/search?q=_smimeHeaderSink&redirect=false

It doesn't seem to be called, but I could be wrong. If it is called, then I don't see how the code would work.

Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/c6ab9ed34946
clean up remaints of _smimeHeaderSink and maxWantedNesting. r=kaie

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: