Bug 1732570 - clean up remaints of _smimeHeaderSink and maxWantedNesting. r=kaie

Differential Revision: https://phabricator.services.mozilla.com/D128208

--HG--
extra : rebase_source : b72e3a556722e45207ee75ca82f0747615847b4f